--- a/package.json
+++ b/package.json
@@ -14,12 +14,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "aws-sdk": "^2.1483.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
-    "mysql2": "^3.5.0",
     "nodemon": "^3.0.1",
+    "tsup": "^8.0.1",
     "vite": "^4.4.9"
   }
 }
